--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,5 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
